# testcase-setuptools-pep660-pythonpath

./: Dockerfile  README.md
my_package/: pyproject.toml
